# cloud-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  deny.toml  release-crates.toml
.github/: CONTRIBUTING.md  (+1 more)
crates/cloud-sdk/: Cargo.toml  README.md
crates/cloud-sdk-hetzner/: Cargo.toml  README.md
crates/cloud-sdk-hetzner-reqwest/: Cargo.toml  README.md
crates/cloud-sdk-hetzner-reqwest/src/: lib.rs
crates/cloud-sdk-hetzner-sanitization/: Cargo.toml  README.md
crates/cloud-sdk-hetzner-sanitization/src/: lib.rs
crates/cloud-sdk-hetzner-testkit/: Cargo.toml  README.md
crates/cloud-sdk-hetzner-testkit/src/: lib.rs
crates/cloud-sdk-hetzner/examples/: action_polling.rs  actions.rs  checked_response.rs  dns.rs  mutation.rs  pagination.rs  prepared.rs  read_only.rs  storage_box.rs
crates/cloud-sdk-hetzner/src/: actions.rs  endpoint.rs  labels.rs  lib.rs  pagination.rs  prepared.rs  query.rs  rate_limit.rs  request.rs  response.rs
crates/cloud-sdk-hetzner/src/actions/: tests.rs
crates/cloud-sdk-hetzner/src/cloud/: catalog.rs  firewalls.rs  images.rs  ip.rs  load_balancers.rs  mod.rs  networks.rs  pricing.rs  public_ip.rs  servers.rs  shared.rs  volumes.rs
crates/cloud-sdk-hetzner/src/cloud/catalog/: tests.rs
crates/cloud-sdk-hetzner/src/cloud/firewalls/: actions.rs  rules.rs  tests.rs
crates/cloud-sdk-hetzner/src/cloud/images/: tests.rs
crates/cloud-sdk-hetzner/src/cloud/load_balancers/: actions.rs  metrics.rs  public_ip.rs  resources.rs  services.rs  targets.rs  tests.rs  types.rs
crates/cloud-sdk-hetzner/src/cloud/networks/: actions.rs  floating_ips.rs  primary_ips.rs  resources.rs
crates/cloud-sdk-hetzner/src/cloud/servers/: actions.rs  placement_groups.rs  shared.rs  tests.rs
crates/cloud-sdk-hetzner/src/cloud/volumes/: tests.rs
crates/cloud-sdk-hetzner/src/dns/: mod.rs  rrsets.rs  zones.rs
crates/cloud-sdk-hetzner/src/dns/rrsets/: actions.rs  path.rs  resources.rs  tests.rs  types.rs
crates/cloud-sdk-hetzner/src/dns/zones/: actions.rs  resources.rs  tests.rs  types.rs
crates/cloud-sdk-hetzner/src/prepared/: bodies.rs  endpoints.rs  error.rs  json.rs  operation.rs  tests.rs
crates/cloud-sdk-hetzner/src/prepared/bodies/: compute.rs  dns_rrsets.rs  dns_zones.rs  firewalls.rs  load_balancers.rs  network.rs  security.rs  storage.rs
crates/cloud-sdk-hetzner/src/prepared/endpoints/: compute.rs  network.rs  security_dns.rs  storage.rs
crates/cloud-sdk-hetzner/src/security/: certificates.rs  mod.rs  shared.rs  ssh_keys.rs
crates/cloud-sdk-hetzner/src/security/certificates/: actions.rs  private_key.rs  tests.rs
crates/cloud-sdk-hetzner/src/security/ssh_keys/: tests.rs
crates/cloud-sdk-hetzner/src/serde/: adversarial_tests.rs  binding.rs  checked.rs  checked_security_tests.rs  checked_tests.rs  mod.rs  models.rs  pagination.rs  response.rs  response_operations.tsv  rrsets.rs  strict_json.rs  tests.rs
crates/cloud-sdk-hetzner/src/serde/models/: actions.rs  resources.rs  special.rs
crates/cloud-sdk-hetzner/src/serde/response/: wire.rs
crates/cloud-sdk-hetzner/src/serde/strict_json/: parser.rs
crates/cloud-sdk-hetzner/src/storage/: mod.rs  storage_boxes.rs
crates/cloud-sdk-hetzner/src/storage/storage_boxes/: action_bodies.rs  bodies.rs  endpoints.rs  requests.rs  subaccount_bodies.rs  tests.rs  types.rs
crates/cloud-sdk-hetzner/tests/: live_smoke.rs
crates/cloud-sdk-hetzner/tests/live_smoke/: catalog.rs  config.rs
crates/cloud-sdk-reqwest/: Cargo.toml  README.md
crates/cloud-sdk-reqwest/src/: lib.rs  test_server.rs
crates/cloud-sdk-reqwest/src/asynchronous/: body.rs  client.rs  config.rs  mod.rs  tests.rs
crates/cloud-sdk-reqwest/src/asynchronous/tests/: lifecycle.rs
crates/cloud-sdk-reqwest/src/blocking/: auth.rs  body.rs  client.rs  config.rs  endpoint.rs  error.rs  mod.rs  test_server.rs  tests.rs  webpki_roots_tests.rs
crates/cloud-sdk-reqwest/src/shared/: auth.rs  config.rs  content_type.rs  credentials.rs  endpoint.rs  error.rs  mod.rs  rate_limit.rs
crates/cloud-sdk-reqwest/testdata/: README.md
crates/cloud-sdk-sanitization/: Cargo.toml  README.md
crates/cloud-sdk-sanitization/src/: lib.rs  secret_text.rs
crates/cloud-sdk-testkit/: Cargo.toml  README.md
crates/cloud-sdk-testkit/src/: adversarial.rs  body.rs  lib.rs  metadata.rs  mock.rs  prepared.rs  response.rs  tests.rs
crates/cloud-sdk-testkit/src/tests/: prepared.rs
crates/cloud-sdk/examples/: prepared_request.rs  provider_neutral.rs
crates/cloud-sdk/src/: action_polling.rs  buffer.rs  lib.rs  operation.rs  pagination.rs  rate_limit.rs  transport.rs
crates/cloud-sdk/src/action_polling/: tests.rs
crates/cloud-sdk/src/operation/: metadata.rs  operation_id.rs  policy.rs  prepared.rs  tests.rs
crates/cloud-sdk/src/pagination/: tests.rs
crates/cloud-sdk/src/transport/: asynchronous.rs  content_type.rs  endpoint.rs  tests.rs
docs/: API_MATRIX.md  (+41 more)
fuzz/: Cargo.toml  rust-toolchain.toml
fuzz/fuzz_targets/: action_polling.rs  action_requests.rs  buffer_writers.rs  checked_response.rs  labels_dns.rs  pagination.rs  request_targets.rs  response_content_type.rs  response_envelopes.rs
fuzz/seeds/action_polling/: running.txt  terminal.txt
fuzz/seeds/action_requests/: boundaries.txt
fuzz/seeds/buffer_writers/: json-escapes.txt  plain.txt
fuzz/seeds/checked_response/: deep-nesting.json  error.json  invalid-utf8.hex  malformed.json  oversized-integer.json  success.json
fuzz/seeds/labels_dns/: invalid.txt  valid.txt
fuzz/seeds/pagination/: incoherent.txt  valid-terminal.txt
fuzz/seeds/request_targets/: invalid-authority.txt  valid.txt
fuzz/seeds/response_content_type/: invalid.txt  valid.txt
fuzz/seeds/response_envelopes/: action-valid.json  error-valid.json  malformed.json  pagination-valid.json
tests/reqwest-feature-unification/: Cargo.toml
tests/reqwest-feature-unification/src/: lib.rs
tools/prepared-coverage-check/: Cargo.toml
tools/prepared-coverage-check/locks/: bodies.rs  endpoints.rs
tools/prepared-coverage-check/src/: compatibility.rs  definitions.rs  evidence.rs  inspect.rs  main.rs  parse.rs
(+187 files in other folders)
