[workspace]
members = [
    "crates/cloud-sdk",
    "crates/cloud-sdk-hetzner",
    "crates/cloud-sdk-reqwest",
    "crates/cloud-sdk-sanitization",
    "crates/cloud-sdk-testkit",
]
exclude = ["fuzz"]
default-members = ["crates/cloud-sdk"]
resolver = "3"

[workspace.package]
version = "0.28.0"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/valkyoth/cloud-sdk"
repository = "https://github.com/valkyoth/cloud-sdk"
readme = "README.md"

[workspace.lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "forbid"
unused_must_use = "deny"
missing_docs = "deny"

[workspace.lints.clippy]
panic = "forbid"
unwrap_used = "forbid"
expect_used = "forbid"
undocumented_unsafe_blocks = "forbid"
indexing_slicing = "forbid"
arithmetic_side_effects = "forbid"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"

[workspace.dependencies]
aws-lc-fips-sys = { version = "=0.13.15", default-features = false }
aws-lc-rs = { version = "=1.17.1", default-features = false }
aws-lc-sys = { version = "=0.42.0", default-features = false }
bytes = { version = "1.12.1", default-features = false }
cloud-sdk = { path = "crates/cloud-sdk", version = "0.28.0" }
cloud-sdk-hetzner = { path = "crates/cloud-sdk-hetzner", version = "0.21.1" }
cloud-sdk-reqwest = { path = "crates/cloud-sdk-reqwest", version = "0.19.0" }
cloud-sdk-sanitization = { path = "crates/cloud-sdk-sanitization", version = "0.13.14" }
cloud-sdk-testkit = { path = "crates/cloud-sdk-testkit", version = "0.17.0" }
reqwest = { version = "=0.13.4", default-features = false }
rustls = { version = "=0.23.42", default-features = false }
rustls-platform-verifier = { version = "=0.7.0", default-features = false }
webpki-roots = { version = "=1.0.8", default-features = false }
tokio = { version = "1.52.3", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0.150" }
sanitization = { version = "1.2.4", default-features = false }

[profile.release]
overflow-checks = true
panic = "abort"
