[package]
name = "cloud-sdk-hetzner-sanitization"
description = "Optional secret-sanitization boundary for cloud-sdk-hetzner."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[features]
default = []
std = ["cloud-sdk-hetzner/std"]

[dependencies]
cloud-sdk-hetzner.workspace = true

[lints]
workspace = true
