[package]
name = "cloud-sdk-hetzner"
description = "no_std-first Hetzner provider crate for cloud-sdk."
version = "0.19.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
alloc = ["cloud-sdk/alloc"]
serde = ["alloc", "dep:serde"]
std = ["alloc", "cloud-sdk/std"]

[dependencies]
cloud-sdk.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
cloud-sdk-reqwest = { workspace = true, features = ["blocking-rustls"] }
cloud-sdk-sanitization.workspace = true
cloud-sdk-testkit.workspace = true
serde_json.workspace = true

[lints]
workspace = true

[[example]]
name = "action_polling"
required-features = ["serde"]

[[example]]
name = "pagination"
required-features = ["serde"]
