[package]
name = "cloud-sdk-hetzner"
description = "no_std-first Hetzner provider crate for cloud-sdk."
version = "0.24.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
alloc = ["cloud-sdk/alloc"]
serde = [
    "alloc",
    "dep:cloud-sdk-sanitization",
    "dep:serde",
    "dep:serde_json",
    "cloud-sdk-sanitization/alloc",
]
std = ["alloc", "cloud-sdk/std"]

[dependencies]
cloud-sdk.workspace = true
cloud-sdk-sanitization = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
cloud-sdk-reqwest = { workspace = true, features = ["blocking-rustls"] }
cloud-sdk-sanitization.workspace = true
cloud-sdk-testkit.workspace = true
serde_json.workspace = true

[lints]
workspace = true

[[test]]
name = "live_smoke"
required-features = ["serde"]

[[example]]
name = "action_polling"
required-features = ["serde"]

[[example]]
name = "pagination"
required-features = ["serde"]

[[example]]
name = "checked_response"
required-features = ["serde"]
