[package]
name = "cloud-sdk-reqwest"
description = "Optional provider-neutral reqwest transport boundary for cloud-sdk."
version = "0.16.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
exclude = ["testdata/"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
std = ["cloud-sdk/std", "cloud-sdk-sanitization?/std"]
blocking-rustls = [
    "std",
    "dep:cloud-sdk-sanitization",
    "dep:reqwest",
    "reqwest/blocking",
    "reqwest/rustls",
]
blocking-rustls-fips = [
    "std",
    "dep:aws-lc-fips-sys",
    "dep:aws-lc-rs",
    "dep:aws-lc-sys",
    "dep:cloud-sdk-sanitization",
    "dep:reqwest",
    "dep:rustls",
    "dep:rustls-platform-verifier",
    "reqwest/blocking",
    "reqwest/rustls-no-provider",
    "rustls/fips",
    "rustls/std",
    "rustls/tls12",
]
async-rustls = [
    "std",
    "dep:bytes",
    "dep:cloud-sdk-sanitization",
    "dep:reqwest",
    "reqwest/rustls",
]

[dependencies]
aws-lc-fips-sys = { workspace = true, optional = true }
aws-lc-rs = { workspace = true, optional = true }
aws-lc-sys = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
cloud-sdk.workspace = true
cloud-sdk-sanitization = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-platform-verifier = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "time"] }

[lints]
workspace = true
