[package]
name = "cloud-sdk-sanitization"
description = "Optional provider-neutral secret-sanitization boundary for cloud-sdk."
version = "0.12.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[features]
default = []
std = ["cloud-sdk/std"]

[dependencies]
cloud-sdk.workspace = true

[lints]
workspace = true
