[package]
name = "cloud-sdk-sanitization"
description = "Optional provider-neutral secret-sanitization boundary for cloud-sdk."
version = "0.14.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
alloc = ["cloud-sdk/alloc", "sanitization/alloc"]
std = ["alloc", "cloud-sdk/std"]

[dependencies]
cloud-sdk.workspace = true
sanitization.workspace = true

[lints]
workspace = true
