[package]
name = "cloud-sdk-testkit"
description = "Provider-neutral mock transport and fixture boundary for cloud-sdk."
version = "0.13.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[features]
default = []
alloc = ["cloud-sdk/alloc"]
std = ["alloc", "cloud-sdk/std"]

[dependencies]
cloud-sdk.workspace = true

[lints]
workspace = true
