[package]
name = "cloud-sdk"
description = "no_std-first multi-provider cloud SDK foundations."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[features]
default = []
alloc = []
std = ["alloc"]

[lints]
workspace = true
