[package]
name = "cloud-sdk-reqwest-feature-unification-test"
version = "0.0.0"
edition = "2024"
rust-version = "1.90"
publish = false

[workspace]

[dependencies]
cloud-sdk-reqwest = {
    path = "../../crates/cloud-sdk-reqwest",
    version = "=0.20.2",
    features = [
        "async-rustls",
        "blocking-rustls",
        "blocking-rustls-fips",
        "blocking-rustls-webpki-roots",
    ],
}
reqwest = { version = "=0.13.4", default-features = false, features = ["hickory-dns", "http2"] }
rustls = { version = "=0.23.42", default-features = false, features = ["std"] }
tokio = { version = "=1.52.3", default-features = false, features = ["rt"] }
